# gen5_300v

./: .cproject  .gitignore  .mxproject  .project  Build.bat  Build.sh  CMakeLists.txt  Centre_Aligned_PWM Debug.launch  Centre_Aligned_PWM.ioc
Core/Inc/: Ad2s1210.h  Angle_to_Speed.h  Eeprom.h  FOC_Basic.h  FOC_Basic_FF.h  FOC_Basic_FF_private.h  FOC_Basic_FF_types.h  FOC_Basic_private.h  FOC_Basic_types.h  FOC_H12.h  FOC_H12_private.h  FOC_H12_types.h  FOC_LivGguard.h  FOC_LivGguard_private.h  FOC_LivGguard_types.h  FOC_MTPA_FF.h  FOC_MTPA_FF_private.h  FOC_MTPA_FF_types.h  FOC_MTPA_FWC_FF.h  FOC_MTPA_FWC_FF_private.h  FOC_MTPA_FWC_FF_types.h  Helper_Functions.h  Limit_Errors.h  MCU_Protections.h  MCU_Protections_private.h  MCU_Protections_types.h  NTC_Temp_Reading.h  Offset0.h  Offset0_private.h  Offset0_types.h  Offset_Scheduler.h  Open_FOC0.h  Open_FOC0_private.h  Open_FOC0_types.h  Peripheral_Init.h  RMS_Current.h  Rate_Limiter.h  Resolver_Position.h  Sensor_Disconnection_Checks.h  Speed_Estimator.h  (+16 more)
Core/Libs/Include/: Autotune101.h
Core/Src/: Ad2s1210.c  Angle_to_Speed.c  Eeprom.c  FOC_Basic.c  FOC_Basic_FF.c  FOC_H12.c  FOC_H12_data.c  FOC_LivGguard.c  FOC_LivGguard_data.c  FOC_MTPA_FF.c  FOC_MTPA_FWC_FF.c  Helper_Functions.c  Limit_Errors.c  MCU_Protections.c  MCU_Protections_data.c  NTC_Temp_Reading.c  Offset0.c  Offset_Scheduler.c  Open_FOC0.c  Peripheral_Init.c  RMS_Current.c  Rate_Limiter.c  Resolver_Position.c  Sensor_Disconnection_Checks.c  Speed_Estimator.c  Speed_Sensing.c  Torque_Management.c  alignment_routine.c  fdcan.c  main.c  rtGetNaN.c  rt_nonfinite.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  throttle_map.c
Debug/: Centre_Aligned_PWM.elf  Centre_Aligned_PWM.hex  Centre_Aligned_PWM.list  Centre_Aligned_PWM.map  makefile  objects.list  sources.mk
Debug/Core/Src/: Eeprom.d  Eeprom.su  FOC_Basic.d  FOC_Basic.su  FOC_Basic_FF.d  FOC_Basic_FF.su  FOC_H12.d  FOC_H12.su  FOC_H12_data.d  FOC_LivGguard.d  FOC_LivGguard.su  FOC_LivGguard_data.d  FOC_MTPA_FF.d  FOC_MTPA_FF.su  MCU_Protections.d  MCU_Protections.su  MCU_Protections_data.d  NTC_Temp_Reading.d  NTC_Temp_Reading.su  Open_FOC0.d  Open_FOC0.su  RMS_Current.d  RMS_Current.su  Rate_Limiter.d  Rate_Limiter.su  Sensor_Disconnection_Checks.d  Sensor_Disconnection_Checks.su  Speed_Estimator.d  Speed_Estimator.su  Speed_Sensing.d  Speed_Sensing.su  alignment_routine.d  alignment_routine.su  fdcan.d  fdcan.su  main.d  main.su  rtGetNaN.d  rtGetNaN.su  rt_nonfinite.d  (+7 more)
Debug/Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.d  stm32h7xx_hal.su  stm32h7xx_hal_adc.d  stm32h7xx_hal_adc.su  stm32h7xx_hal_adc_ex.d  stm32h7xx_hal_adc_ex.su  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_exti.su  stm32h7xx_hal_fdcan.d  stm32h7xx_hal_fdcan.su  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash.su  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_flash_ex.su  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c.su  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_pwr_ex.su  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc.su  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_rcc_ex.su  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim.su  stm32h7xx_hal_tim_ex.d  stm32h7xx_hal_tim_ex.su  subdir.mk
cmake/: arm-none-eabi.cmake
