# ==============================================================================
#  STM32 CMakeLists.txt — Pick & Place Template
#  Supports: STM32F0/F1/F2/F3/F4/F7/H7/L0/L1/L4/G0/G4/U5 series
# ==============================================================================

cmake_minimum_required(VERSION 3.22)

# ==============================================================================
# [1] TOOLCHAIN — Set BEFORE project()
#     Make sure arm-none-eabi-gcc is on your PATH, or set an absolute path here.
# ==============================================================================
set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/arm-none-eabi.cmake"
    CACHE STRING "Toolchain file")
#   ^ If you don't use a separate toolchain file, uncomment the block below:
#
# set(CMAKE_SYSTEM_NAME Generic)
# set(CMAKE_SYSTEM_PROCESSOR arm)
# set(CMAKE_C_COMPILER   arm-none-eabi-gcc)
# set(CMAKE_CXX_COMPILER arm-none-eabi-g++)
# set(CMAKE_ASM_COMPILER arm-none-eabi-gcc)
# set(CMAKE_OBJCOPY      arm-none-eabi-objcopy)
# set(CMAKE_SIZE         arm-none-eabi-size)
# set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

# ==============================================================================
# [2] PROJECT
# ==============================================================================
project(Pegasus_v4
    VERSION 1.0.0
    LANGUAGES C CXX ASM
)

# ==============================================================================
# [3] TARGET MCU — ⚠️ EDIT THIS SECTION FOR YOUR CHIP
# ==============================================================================

# --- Pick your MCU family (uncomment ONE block) -------------------------------

# ── STM32F4 ──────────────────────────────────────────────────────────────────
# set(MCU_FAMILY     STM32F4xx)
# set(MCU_MODEL      STM32F411xE)           # e.g. STM32F401xC, STM32F407xx
# set(CPU_PARAMETERS
#     -mcpu=cortex-m4
#     -mthumb
#     -mfpu=fpv4-sp-d16
#     -mfloat-abi=hard
# )

# ── STM32F1 (uncomment to use) ────────────────────────────────────────────────
# set(MCU_FAMILY     STM32F1xx)
# set(MCU_MODEL      STM32F103xB)
# set(CPU_PARAMETERS -mcpu=cortex-m3 -mthumb -mfloat-abi=soft)

# ── STM32H7 (uncomment to use) ────────────────────────────────────────────────
set(MCU_FAMILY     STM32H7xx)
set(MCU_MODEL      STM32H743xx)
set(CPU_PARAMETERS -mcpu=cortex-m7 -mthumb -mfpu=fpv5-sp-d16 -mfloat-abi=hard)

# ── STM32L4 (uncomment to use) ────────────────────────────────────────────────
# set(MCU_FAMILY     STM32L4xx)
# set(MCU_MODEL      STM32L476xx)
# set(CPU_PARAMETERS -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard)

# ── STM32G0 (uncomment to use) ────────────────────────────────────────────────
# set(MCU_FAMILY     STM32G0xx)
# set(MCU_MODEL      STM32G071xx)
# set(CPU_PARAMETERS -mcpu=cortex-m0plus -mthumb -mfloat-abi=soft)

# ==============================================================================
# [4] LINKER SCRIPT — ⚠️ Point to YOUR .ld file
# ==============================================================================
set(LINKER_SCRIPT "${CMAKE_CURRENT_SOURCE_DIR}/STM32H743ZITX_FLASH.ld")
#   ^ Generated by STM32CubeMX, or place your own here.

# ==============================================================================
# [5] HAL / CMSIS PATHS — ⚠️ Set paths to STM32Cube HAL/LL drivers
#     Typically from STM32CubeMX project or downloaded STM32CubeF4/F1/… pack.
# ==============================================================================
set(CUBE_FW_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Drivers")
#   Expected layout inside CUBE_FW_PATH:
#     Drivers/
#       CMSIS/
#         Device/ST/${MCU_FAMILY}/Include/
#         Include/                         ← ARM CMSIS core headers
#       ${MCU_FAMILY}_HAL_Driver/
#         Inc/
#         Src/

# ==============================================================================
# [6] SOURCE FILES — ⚠️ Add your .c / .cpp / .s files here
# ==============================================================================

# --- Application sources (add your own files) ---------------------------------
set(APP_SOURCES
    Core/Src/main.c
    Core/Src/stm32h7xx_it.c
    Core/Src/stm32h7xx_hal_msp.c
    Core/Src/system_stm32h7xx.c
    Core/Src/syscalls.c
    Core/Src/sysmem.c
    Core/Src/alignment_routine.c
    Core/Src/Eeprom.c
    Core/Src/fdcan.c
    Core/Src/FOC_Basic.c
    Core/Src/FOC_Basic_FF.c
    Core/Src/FOC_H12_data.c
    Core/Src/FOC_H12.c
    Core/Src/FOC_LivGguard_data.c
    Core/Src/FOC_LivGguard.c
    Core/Src/FOC_MTPA_FF.c
    Core/Src/MCU_Protections_data.c
    Core/Src/MCU_Protections.c
    Core/Src/NTC_Temp_Reading.c
    Core/Src/Open_FOC0.c
    Core/Src/Rate_Limiter.c
    Core/Src/rt_nonfinite.c
    Core/Src/rtGetNaN.c
    Core/Src/Sensor_Disconnection_Checks.c
    Core/Src/Speed_Sensing.c
    Core/Startup/startup_stm32h743zitx.s   # ← generated startup file
    # Core/Src/myfile.c
    # Core/Src/mydriver.cpp
)

# --- HAL Driver sources (auto-glob or list explicitly) ------------------------
#  Option A — Glob (convenient, but CMake won't auto-detect new files):
file(GLOB HAL_SOURCES
    "${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Src/*.c"
)
#  Option B — List explicitly (recommended for reproducible builds):
# set(HAL_SOURCES
#     ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Src/stm32f4xx_hal.c
#     ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Src/stm32f4xx_hal_gpio.c
#     ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Src/stm32f4xx_hal_rcc.c
#     ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Src/stm32f4xx_hal_uart.c
#     # ... add more as needed
# )

# ==============================================================================
# [7] INCLUDE DIRECTORIES — ⚠️ Add any extra include paths here
# ==============================================================================
set(INCLUDE_DIRS
    Core/Inc
    Core/Src
    ${CUBE_FW_PATH}/CMSIS/Device/ST/${MCU_FAMILY}/Include
    ${CUBE_FW_PATH}/CMSIS/Include
    ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Inc
    ${CUBE_FW_PATH}/${MCU_FAMILY}_HAL_Driver/Inc/Legacy
    # Add your own header directories below:
    # Middlewares/FreeRTOS/Source/include
    # Middlewares/FreeRTOS/Source/portable/GCC/ARM_CM4F
)

# ==============================================================================
# [8] PREPROCESSOR DEFINITIONS — ⚠️ Match your MCU and HAL config
# ==============================================================================
set(COMPILE_DEFINITIONS
    DEBUG
    USE_HAL_DRIVER
    ${MCU_MODEL}            # e.g. STM32F411xE  → enables correct HAL headers
    # HSE_VALUE=8000000     # External crystal frequency in Hz (if used)
    # USE_FULL_LL_DRIVER    # Uncomment if using LL (Low-Level) instead of HAL
)

# ==============================================================================
# [9] BUILD CONFIGURATION — Compiler & Linker flags
# ==============================================================================
set(COMMON_FLAGS
    ${CPU_PARAMETERS}
    -Wall
    -Wextra
    -fdata-sections
    -ffunction-sections        # Dead-code elimination per function/data
    # -Og                      # Optimize for debug (good default for dev)
    # -Os                      # Optimize for size  (good for release)
    # -O2                      # Optimize for speed
    -O2
)

set(C_FLAGS
    ${COMMON_FLAGS}
    -std=gnu11
)

set(CXX_FLAGS
    ${COMMON_FLAGS}
    -std=gnu++11
    -fno-rtti
    -fno-exceptions
)

set(ASM_FLAGS
    ${CPU_PARAMETERS}
    -DDEBUG
    -g3
    -x assembler-with-cpp      # Allows #include in .s files
)

set(LINKER_FLAGS
    ${CPU_PARAMETERS}
    -T${LINKER_SCRIPT}
    -Wl,-Map=${PROJECT_NAME}.map,--cref
    -Wl,--gc-sections          # Remove unused sections
    -Wl,--print-memory-usage
    --specs=nano.specs          # Use newlib-nano (smaller C runtime)
    --specs=nosys.specs         # Stub syscalls (no OS)
    # -u _printf_float          # Uncomment to enable float in printf
    # -u _scanf_float           # Uncomment to enable float in scanf
)

# ==============================================================================
# [10] EXECUTABLE TARGET — No need to edit below this line normally
# ==============================================================================

# Force .elf extension on the output binary
set(CMAKE_EXECUTABLE_SUFFIX ".elf")

add_executable(${PROJECT_NAME}
    ${APP_SOURCES}
    ${HAL_SOURCES}
)

target_compile_definitions(${PROJECT_NAME} PRIVATE
    ${COMPILE_DEFINITIONS}
)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${INCLUDE_DIRS}
)

target_compile_options(${PROJECT_NAME} PRIVATE
    $<$<COMPILE_LANGUAGE:C>:${C_FLAGS}>
    $<$<COMPILE_LANGUAGE:CXX>:${CXX_FLAGS}>
    $<$<COMPILE_LANGUAGE:ASM>:${ASM_FLAGS}>
)

target_link_options(${PROJECT_NAME} PRIVATE
    ${LINKER_FLAGS}
)

# ==============================================================================
# [11] POST-BUILD — Generate .hex, .bin and print size
# ==============================================================================
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_OBJCOPY} -O ihex   $<TARGET_FILE:${PROJECT_NAME}> ${PROJECT_NAME}.hex
    COMMAND ${CMAKE_OBJCOPY} -O binary $<TARGET_FILE:${PROJECT_NAME}> ${PROJECT_NAME}.bin
    COMMAND ${CMAKE_OBJDUMP} -h -S $<TARGET_FILE:${PROJECT_NAME}> > ${PROJECT_NAME}.list
    COMMAND ${CMAKE_SIZE}    --format=berkeley $<TARGET_FILE:${PROJECT_NAME}>
    COMMENT ">>> Generating ${PROJECT_NAME}.hex / .bin and printing size"
)

# ==============================================================================
# [12] OPTIONAL — Flash target (uses OpenOCD; adjust interface/target as needed)
# ==============================================================================
find_program(OPENOCD openocd)
if(OPENOCD)
    add_custom_target(flash
        COMMAND ${OPENOCD}
            -f interface/stlink.cfg
            -f target/stm32h7x.cfg
            -c "init; reset halt; stm32h7x mass_erase 0; exit"
        COMMAND ${OPENOCD}
            -f interface/stlink.cfg
            -f target/stm32h7x.cfg
            -c "program ${PROJECT_NAME}.bin verify reset exit 0x8000000"
        DEPENDS ${PROJECT_NAME}
        COMMENT ">>> Flashing ${PROJECT_NAME}.bin via OpenOCD"
    )
endif()

# ==============================================================================
# END OF FILE
# ==============================================================================